fixes menu close on mobile issue and svg resizing

--- a/browser/src/styles.css
+++ b/browser/src/styles.css
@@ -8,6 +8,7 @@
 
 html {
   scroll-behavior: smooth;
+  font: 62.5%;
 }
 
 @media screen and (min-width: 800px) {
@@ -22,13 +23,6 @@ main > * {
   grid-column: 3 / span 1;
 }
 
-header {
-  text-align: left;
-  display: flex;
-  flex-direction: column;
-  max-width: 100vw;
-}
-
 .drawer {
   position: fixed;
   width: 100vw;
@@ -37,7 +31,7 @@ header {
   left: 0;
   top: 0;
   z-index: 200;
-  padding: 32px 16px;
+  padding: 3.2rem 1.6rem;
   box-sizing: border-box;
   transition: transform 0.3s ease-out;
 }
@@ -65,12 +59,6 @@ header {
 
 ul {
   list-style: none;
-}
-
-header h1 {
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .graph {
@@ -119,6 +107,29 @@ header h1 {
   margin-bottom: 0.25em;
 }
 
+.hamburger_menu_container.open {
+  position: fixed;
+  padding-right: 2em;
+}
+
+.header {
+  text-transform: uppercase;
+  max-width: 100vw;
+}
+
+header .header_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+}
+
+header .header_content .torch-icon {
+  height: 5rem;
+  width: auto;
+  min-width: 3rem;
+}
+
 @media (min-width: 768px) {
   .foia-list__item-table {
     border-spacing: 1.5em;
@@ -129,6 +140,20 @@ header h1 {
     min-height: -moz-fit-content;
     min-height: fit-content;
   }
+  header {
+    padding: 1rem;
+  }
+  header .header_content {
+    flex-direction: row;
+    text-align: left;
+    align-items: center;
+    margin: 0 2rem;
+  }
+
+  header .header_content .torch-icon {
+    margin-right: 1rem;
+    height: 5rem;
+  }
 
   .navigation_items {
     padding: 0 3em;
@@ -136,14 +161,4 @@ header h1 {
   .navigation_items ul {
     float: right;
   }
-
-  .hamburger_menu_container.open {
-    position: fixed;
-    padding-right: 2em;
-  }
-}
-
-.torch-icon {
-  width: 1em;
-  height: 1em;
 }
